# IB_Trade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  ib-rebalance  phase0_checklist.md  phase10_checklist.md  phase1_checklist.md  phase2_checklist.md  phase3_checklist.md  phase4_checklist.md  phase5_checklist.md  phase6_checklist.md  phase7_checklist.md  phase8_checklist.md  phase9_checklist.md  plan.md  pyproject.toml  requirements.txt  srs.md  workflow.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  format.yml
examples/: portfolios.csv  positions.csv  scenario.yml  settings.ini
github/: PULL_REQUEST_TEMPLATE.md
github/workflows/: ci.yml
ib_async/: __init__.pyi
ib_trade-0.1.1.dist-info/: METADATA
ibkr_etf_rebalancer/: __init__.py  account_state.py  app.py  config.py  errors.py  fx_engine.py  ib-rebalance  ibkr_provider.py  limit_pricer.py  logging_utils.py  order_builder.py  order_executor.py  portfolio_loader.py  pricing.py  rebalance_engine.py  reporting.py  safety.py  scenario.py  scenario_runner.py  target_blender.py  util.py
tests/: conftest.py  test_acceptance_flow.py  test_account_state.py  test_cli.py  test_config.py  test_fx_engine.py  test_ibkr_provider.py  test_ibkr_quote_provider.py  test_limit_pricer.py  test_logging_utils.py  test_order_builder.py  test_order_executor.py  test_portfolio_loader.py  test_pricing.py  test_pricing_provider_selection.py  test_rebalance_engine.py  test_reporting.py  test_safety.py  test_target_blender.py  test_util.py  test_version_flag.py
tests/data/: portfolios_invalid_cash_positive.csv  portfolios_invalid_multiple_cash.csv  portfolios_invalid_non_numeric.csv  portfolios_invalid_sum.csv  portfolios_invalid_unknown.csv  portfolios_margin.csv  portfolios_valid.csv
tests/e2e/: __init__.py  runner.py  scenario.py  test_scenarios.py  update_golden.py
tests/golden/: post_trade_report.csv  post_trade_report.md  pre_trade_report.csv  pre_trade_report.md
typings/typer/: __init__.pyi  testing.pyi
(+82 files in other folders)
