[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ib-trade"
version = "0.1.0"
description = "Interactive Brokers trading utilities"
requires-python = ">=3.11"
dependencies = [
    "ib_async",
    "pydantic>=2",
    "pandas",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "freezegun",
    "loguru",
    "ruff",
    "mypy",
    "black",
    "pandas-stubs",        
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
# Keep app code strict
strict = true
# Teach mypy about Pydantic BaseModel/validators
plugins = ["pydantic.mypy"]

# Ignore missing types only for specific third-party modules used in tests
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "pytest", "hypothesis", "freezegun"]
ignore_missing_imports = true

# So tests don't have to annotate every function/fixture
[[tool.mypy.overrides]]
module = ["tests/**/*.py", "tests/*.py"]
disallow_untyped_defs = false
check_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

[tool.pydantic-mypy]
init_typed = true              # treat __init__ as typed
warn_untyped_fields = true
